# zartrux-miner

./: .gitignore  CMakeLists.txt  README.md  errores.txt  estrctrra 2.txt  estrctura.txt  estructura.txt  requirements.txt  vcpkg.json  zartrux-config.cmake.in
cmake/: zartrux-config.cmake.in
docs/: ZARTRUX_DISTRIBUTED.md
memory/: LegacyAllocator.h  SmartCache.cpp  VirtualMemory.cpp  VirtualMemory.h
network/: StratumClient.cpp  WebsocketBackend.cpp  WebsocketBackend.h
patches/: randomx_patch_nasm.asm
runtime/: AdaptiveScheduler.cpp  AdaptiveScheduler.h  PowerSafe.h  runtime-config.cmake.in
security/: AESNonceEncryptor.cpp  AESNonceEncryptor.h  ConfigSigner.h
src/: CMakeLists.txt  zarmain.cpp
src/arch/: CMakeLists.txt  Cpu.cpp  Cpu.h  arch-config.cmake.in
src/arch/x8ag/: kernel_x86_avx.cpp  kernel_x86_avx.h  kernel_x86_avx512.cpp  kernel_x86_avx512.h  kernel_x86_generic.cpp  kernel_x86_generic.h  kernel_x86_sse2.cpp  kernel_x86_sse2.h
src/bridge/: python_bindings.cpp
src/config/: config_manager.json  ia_config.json  miner_config.json  model_registry.json
src/core/: CMakeLists.txt  JobManager.cpp  JobManager.h  MinerCore.cpp  MinerCore.h  MiningModeManager.cpp  MiningModeManager.h  NonceValidator.cpp  NonceValidator.h  PoolDispatcher.cpp  PoolDispatcher.h  SmartCache.cpp  SmartCache.h  core-config.cmake.in  hash.cpp  hash.h
src/core/ia/: IAReceiver.cpp  IAReceiver.h
src/core/threads/: WorkerThread.cpp  WorkerThread.h
src/crypto/: CMakeLists.txt
src/crypto/argon2/include/: argon2.h
src/crypto/argon2/lib/: argon2.c  core.c  core.h  encoding.h  genkat.h  impl-select.c
src/crypto/randomx/: aes_hash.cpp  aes_hash.hpp  allocator.cpp  allocator.hpp  blake2_generator.cpp  blake2_generator.hpp  bytecode_machine.cpp  bytecode_machine.hpp  common.hpp  configuration.h  dataset.cpp  dataset.hpp  instruction.hpp  instructions_portable.cpp  intrin_portable.h  jit_compiler.hpp  jit_compiler_a64.cpp  jit_compiler_a64.hpp  jit_compiler_a64_static.S  jit_compiler_a64_static.hpp  jit_compiler_fallback.cpp  jit_compiler_fallback.hpp  jit_compiler_x86.cpp  jit_compiler_x86.hpp  jit_compiler_x86_static.S  jit_compiler_x86_static.asm  jit_compiler_x86_static.hpp  program.hpp  randomx.cpp  randomx.h  reciprocal.c  reciprocal.h  soft_aes.cpp  soft_aes.h  superscalar.cpp  superscalar.hpp  superscalar_program.hpp  virtual_machine.cpp  virtual_machine.hpp  virtual_memory.cpp  (+9 more)
src/crypto/randomx/blake2/: blake2-impl.h  blake2.h  blake2b-round.h  blake2b.c  blake2b_sse41.c  blamka-round-ref.h  endian.h
src/crypto/rx/: Profiler.cpp  Profiler.h
src/ia-modules/: CMakeLists.txt
src/ia-modules/analytics/: Hash_Rate_Predictor.py  NoncePatternAnalyzer.py  cluster_analyzer.py  entropy_tools.py  fourier_analyzer.py  lmdb_nonce_extractor.py  time_series_analyzer.py  zar.py
src/ia-modules/bridge/: ethical_nonce_adapter.py  inject_nonces_from_ia.py  predict_nonce_inference.py  predict_nonce_server.py  predict_nonce_success.py  test_inference.py
src/ia-modules/evaluation/: correlation_analysis.py  distribution_analyzer.py  entropy_analysis.py  kl_divergence.py  lorenz_entropy.py  nonce_stats.py  pca_nonce_classifier.py  survival_analyzer.py
src/ia-modules/launcher/: zartrux_launcher.py
src/ia-modules/training/: AutoTrainer.py  advanced_hash_classifier.py  regression_model.py  train_model.py
src/ia-modules/utils/: config_manager.py  data_preprocessing.py  feature_engineer.py  nonce_loader.py
src/ia-modules/validation/: nonce_quality.py  nonce_quality_filter.py
src/memory/: CMakeLists.txt  LegacyAllocator.cpp  SmartCache.cpp  SmartCache.h
src/metrics/: CMakeLists.txt  PrometheusExporter.cpp  PrometheusExporter.h  prometheus_labels.yaml
src/network/: CMakeLists.txt  PoolFailover.cpp  PoolFailover.h  StratumClient.cpp  StratumClient.h
src/patches/: CMakeLists.txt  randomx_patch.asm  randomx_patch_masm.asm
src/runtime/: AdaptiveScheduler.cpp  CMakeLists.txt  PowerSafe.cpp  Profiler.cpp  Profiler.h  SystemMonitor.cpp  SystemMonitor.h
src/security/: CMakeLists.txt  ConfigSigner.cpp
src/utils/: CMakeLists.txt  Chrono.h  Logger.cpp  Logger.h  NodeInfo.h  StatusExporter.cpp  StatusExporter.h  config_manager.cpp  config_manager.h  hex_validator.py  nonce_logger_adapter.cpp  nonce_logger_adapter.h
src/zarbackend/: server.py
src/zarbackend/static/css/: styles.css
src/zarbackend/templates/: index.html
utils/: Chrono.cpp  Logger.cpp  Logger.h  export_successful_nonces.py  nonce_logger.py  nonce_logger_adapter.cpp  nonce_logger_adapter.h  nonce_validator.py
zarbackend/: zartrux_status.json
zarbackend/static/js/: main.js
